# EPITECH-Plazza

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cicd.yml
assets/icon/: credits.txt
includes/: includes.hpp
lib/Flint/: CMakeLists.txt
lib/Flint/includes/: Colors.hpp  CxxABI.hpp  Exceptions.hpp  Flint.hpp  Headers.hpp  Inspection.hpp  Preprocessor.hpp
lib/Flint/src/: Exceptions.cpp
src/: ExceptionsShowcase.cpp  Main.cpp  main.cpp  theplazza.cpp
src/Chef/: Chef.cpp  Chef.hpp  chef.cpp
src/Core/: Core.cpp  Core.hpp
src/Kitchen/: Kitchen.cpp  Kitchen.hpp  kitchen.cpp  kitchen.hpp
src/Manager/: Manager.cpp  Manager.hpp  manager.cpp
src/Mutex/: Mutex.cpp  Mutex.hpp
src/Parsing/: Parsing.cpp  Parsing.hpp
src/Process/: Process.cpp  Process.hpp
src/Protocol/: PizzaPool.cpp  PizzaPool.hpp  Protocol.cpp  Protocol.hpp
src/Reception/: Reception.cpp  Reception.hpp
src/Serveur/: Serveur.cpp  Serveur.hpp  serveur.cpp  serveur.hpp
src/SharedMemory/: SharedMemory.cpp  SharedMemory.hpp
src/Thread/: Thread.cpp  Thread.hpp
src/User/: User.cpp  User.hpp  user.cpp
src/_OldChef/: Chef.cpp  Chef.hpp  OldChef.cpp  OldChef.hpp
src/_OldKitchen/: Kitchen.cpp  Kitchen.hpp  OldKitchen.cpp  OldKitchen.hpp
tests/: CMakeLists.txt  run_unit_tests.sh  tests.cpp
